fixed scrollbar padding

--- a/public/css/stagui.css
+++ b/public/css/stagui.css
@@ -27661,9 +27661,9 @@ body {
   min-height: 200px;
 }
 .landing-wrapper .landing-content {
-  padding: 0 20px 20px;
+  padding: 20px 20px;
   position: fixed;
-  top: 82px;
+  top: 52px;
   right: 0px;
   left: 0px;
   overflow-y: auto;
